# btox

./: Cargo.toml  README.md  go.mod  go.sum  main.go
img/: demo.tape
internal/app/: const.go  editor.go
internal/color/: color.go  colors_gen.go
internal/hash/: hash.go  hash_test.go
internal/ui/: app.go  common.go  msg.go  page_color.go  page_hash.go  page_menu.go  page_menu_delegate.go  page_uuid.go
internal/uuid/: uuid.go
src/: app.rs  event.rs  macros.rs  main.rs  msg.rs  pages.rs  panes.rs  util.rs  widget.rs
src/pages/: bar.rs  base64.rs  foo.rs  hash.rs  number.rs  page.rs  ulid.rs  unixtime.rs  url.rs  util.rs  uuid.rs
src/panes/: list.rs  pane.rs  tool.rs
src/widget/: scroll.rs  select.rs
