[package]
name = "btox"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.3.2"
base16ct = "0.2.0"
chrono = "0.4.38"
crossterm = "0.27.0"
itsuki = "0.1.2"
md-5 = "0.10.6"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
tui-input = "0.8.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
