[package]
name = "btox"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.6.0"
base16ct = "0.2.0"
base64 = "0.22.1"
chrono = "0.4.41"
itsuki = "0.2.1"
md-5 = "0.10.6"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
tui-input = "0.14.0"
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rstest = "0.26.1"
